# ivi-homescreen

./: .clang-format  .gitignore  .gitmodules  .gitreview  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  requirements.bzl  watch_distclean_build.sh
app/: CMakeLists.txt  hmi-debug.h  main.cpp  platform.h
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  generate_module_docs.py  index.rst  modules.rst  requirements.txt
docs/doxygen/: Doxyfile
docs/html/: _c_make_lists_8txt.html  accessibility_8cc.html  accessibility_8cc__incl.map  accessibility_8cc__incl.md5  accessibility_8h.html  accessibility_8h.js  accessibility_8h__dep__incl.map  accessibility_8h__dep__incl.md5  accessibility_8h__incl.map  accessibility_8h__incl.md5  accessibility_8h_source.html  annotated.html  annotated_dup.js  app_8cc.html  app_8cc__incl.map  app_8cc__incl.md5  app_8h.html  app_8h.js  app_8h__dep__incl.map  app_8h__dep__incl.md5  app_8h__incl.map  app_8h__incl.md5  app_8h_source.html  backend_8h.html  backend_8h.js  backend_8h__dep__incl.map  backend_8h__dep__incl.md5  backend_8h__incl.map  backend_8h__incl.md5  backend_8h_source.html  class_accessibility-members.html  class_accessibility.html  class_accessibility.js  class_app-members.html  class_app.html  class_app.js  class_backend-members.html  class_backend.html  class_backend.js  class_backend__inherit__graph.map  (+1096 more)
docs/source/: conf.py  modules.rst
plugins/: CMakeLists.txt  config_plugins.h.in  plugins_config.h.in
plugins/accessibility/: CMakeLists.txt  accessibility.cc
plugins/audio_players/: CMakeLists.txt  audio_player.cc  audio_players.cc  audio_players.h  audio_players_plugin.cc  audio_players_plugin.h  audio_players_plugin_c_api.cc  audio_players_registry.cc  messages.g.cc  messages.g.h  pubspec.yaml
plugins/audioplayers_linux/: CMakeLists.txt  README.md  audio_player.cc  audio_player.h  audioplayers_linux_plugin.cc  audioplayers_linux_plugin.h  audioplayers_linux_plugin_c_api.cc  messages.cc  messages.h
plugins/camera/: CMakeLists.txt  README.md  camera_context.cc  camera_context.h  camera_plugin.cc  camera_plugin.h  camera_plugin_c_api.cc  messages.cc  messages.h
plugins/cloud_firestore/: CMakeLists.txt  README.md  cloud_firestore_plugin.cc  cloud_firestore_plugin.h  cloud_firestore_plugin_c_api.cc  firestore_codec.cc  firestore_codec.h  messages.g.cc  messages.g.h
plugins/common/: CMakeLists.txt  common.h  logging.h
plugins/comp_region/: CMakeLists.txt  comp_region.cc  comp_region.h
plugins/comp_surf/: CMakeLists.txt  comp_surf.cc
plugins/desktop_window/: CMakeLists.txt
plugins/desktop_window_linux/: CMakeLists.txt  README.md  desktop_window_plugin.cc  desktop_window_plugin.h  desktop_window_plugin_c_api.cc  messages.cc  messages.h
plugins/filament_view/: CMakeLists.txt  README.md  filament_scene.cc  filament_scene.h  filament_view.cc  filament_view.h  filament_view_plugin.cc  filament_view_plugin.h  filament_view_plugin_c_api.cc  messages.g.cc  messages.g.h  scene_controller.cc  scene_controller.h
plugins/file_selector/: CMakeLists.txt  README.md  file_selector_plugin.cc  file_selector_plugin.h  file_selector_plugin_c_api.cc  messages.cc  messages.h
plugins/firebase_auth/: CMakeLists.txt  README.md  firebase_auth_plugin.cc  firebase_auth_plugin.h  firebase_auth_plugin_c_api.cc  messages.g.cc  messages.g.h
plugins/firebase_core/: CMakeLists.txt  README.md  firebase_core_plugin.cc  firebase_core_plugin.h  firebase_core_plugin_c_api.cc  messages.g.cc  messages.g.h
plugins/firebase_storage/: CMakeLists.txt  README.md  firebase_storage_plugin.cc  firebase_storage_plugin.h  firebase_storage_plugin_c_api.cc  messages.g.cc  messages.g.h
plugins/go_router/: CMakeLists.txt  README.md  go_router_plugin.cc  go_router_plugin.h  go_router_plugin_c_api.cc  messages.cc  messages.h
plugins/google_sign_in/: CMakeLists.txt  README.md  google_sign_in.cc  google_sign_in_plugin.cc  google_sign_in_plugin.h  google_sign_in_plugin_c_api.cc  messages.cc  messages.h
plugins/gstreamer_egl/: CMakeLists.txt  nv12.h
plugins/integration_test/: CMakeLists.txt  README.md  integration_test.cc  integration_test.h  integration_test_plugin.cc  integration_test_plugin.h  integration_test_plugin_c_api.cc  messages.cc  messages.h
plugins/isolate/: CMakeLists.txt  isolate.cc  isolate.h
plugins/key_event/: CMakeLists.txt  key_event.cc
plugins/keyboard_manager/: CMakeLists.txt
plugins/layer_playground_view/: CMakeLists.txt  README.md  layer_playground_view_plugin.cc  layer_playground_view_plugin.h  layer_playground_view_plugin_c_api.cc
plugins/logging/: CMakeLists.txt  logging.cc  logging.h
plugins/mouse_cursor/: CMakeLists.txt  messages.cc  messages.h  mouse_cursor_plugin.cc  mouse_cursor_plugin.h  mouse_cursor_plugin_c_api.cc
plugins/nav_render_view/: CMakeLists.txt  README.md  libnav_render.cc  libnav_render.h  messages.cc  messages.h  nav_render_error.h  nav_render_surface.cc  nav_render_surface.h  nav_render_texture.cc  nav_render_texture.h  nav_render_view_plugin.cc  nav_render_view_plugin.h  nav_render_view_plugin_c_api.cc
plugins/opengl_texture/: CMakeLists.txt  opengl_texture.cc
plugins/package_info/: CMakeLists.txt  package_info.cc
plugins/pdf/: CMakeLists.txt  README.md  messages.cc  messages.h  pdf_plugin.cc  pdf_plugin.h  pdf_plugin_c_api.cc
plugins/platform_views/: README.md
plugins/restoration/: CMakeLists.txt
plugins/secure_storage/: CMakeLists.txt  README.md  hash_table.h  keyring.h  messages.cc  messages.h  secure_storage.cc  secure_storage_plugin.cc  secure_storage_plugin.h  (+1 more)
shell/: CMakeLists.txt  app.cc  app.h  constants.h  crash_handler.cc  crash_handler.h  display.cc  display.h  egl.cc  egl.h  egl_window.cc  egl_window.h  engine.cc  engine.h  gl_resolver.cc  gl_resolver.h  handler_priority_queue.h  hexdump.h  json_utils.cc  json_utils.h  libflutter_engine.cc  libflutter_engine.h  log.h  logging.h  main.cc  platform_channel.cc  platform_channel.h  shared_library.h  task_runner.cc  task_runner.h  timer.cc  timer.h  utils.h  watchdog.cc  watchdog.h
(+851 files in other folders)
